# financial-news-mcp

./: Makefile  pyproject.toml
src/financial_news_mcp/: scrapers.py  server.py
