[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-news-mcp"
version = "0.1.0"
description = "MCP server for scraping financial news"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
financial-news-mcp = "financial_news_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_news_mcp"]

[tool.hatch.build]
sources = ["src"]